fix date range alignment

--- a/src/app/shared/menu/date/custom-date-range-dropdown.component.css
+++ b/src/app/shared/menu/date/custom-date-range-dropdown.component.css
@@ -24,7 +24,7 @@
 
 .ranges {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
 }
 .ranges > .separator {
   border-left: 1px solid #a3a3a3;
@@ -39,7 +39,7 @@
 
 .pickers {
   position: relative;
-  padding-bottom: 20px;
+  padding: 30px 0;
 }
 .pickers > .invalid {
   position: absolute;
